{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 17,
  "lineage": "65e79573-b247-a66f-6ae7-765ee3b10a50",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b826f75fff3c48df",
            "association_id": "eipassoc-08a7ba60e8a975d3c",
            "domain": "vpc",
            "id": "eipalloc-0b826f75fff3c48df",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0a3983829bdc906af",
            "private_dns": "ip-10-0-1-208.ap-south-1.compute.internal",
            "private_ip": "10.0.1.208",
            "public_dns": "ec2-3-7-230-128.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.230.128",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654435037:internet-gateway/igw-06aee6ad62f1f958b",
            "id": "igw-06aee6ad62f1f958b",
            "owner_id": "654654435037",
            "vpc_id": "vpc-00cc8e4e49065e18a"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b826f75fff3c48df",
            "association_id": "eipassoc-08a7ba60e8a975d3c",
            "connectivity_type": "public",
            "id": "nat-0978fcb35207674e0",
            "network_interface_id": "eni-0a3983829bdc906af",
            "private_ip": "10.0.1.208",
            "public_ip": "3.7.230.128",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0785d0a2d350df26e"
          },
          "dependencies": [
            "aws_eip.eip-tf",
            "aws_subnet.pub-subnet-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654435037:route-table/rtb-0e0674c1ae01a12b4",
            "id": "rtb-0e0674c1ae01a12b4",
            "owner_id": "654654435037",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0978fcb35207674e0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00cc8e4e49065e18a"
          },
          "dependencies": [
            "aws_nat_gateway.nat-gw-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654435037:route-table/rtb-05cd654ba8a2d782e",
            "id": "rtb-05cd654ba8a2d782e",
            "owner_id": "654654435037",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06aee6ad62f1f958b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00cc8e4e49065e18a"
          },
          "dependencies": [
            "aws_internet_gateway.igw-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-subnet-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654435037:subnet/subnet-0b2a89ab46f57cdb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2a89ab46f57cdb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654435037",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-00cc8e4e49065e18a"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654435037:subnet/subnet-0785d0a2d350df26e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0785d0a2d350df26e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654435037",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-00cc8e4e49065e18a"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654435037:vpc/vpc-00cc8e4e49065e18a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00c302d04d43f412c",
            "default_route_table_id": "rtb-0a342dc1a8d6499c9",
            "default_security_group_id": "sg-0f9340f58fa8bee8a",
            "dhcp_options_id": "dopt-05ff29c113a5a43b3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00cc8e4e49065e18a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a342dc1a8d6499c9",
            "owner_id": "654654435037",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    }
  ]
}